--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asclepius-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,7 +9,28 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^3.6.2",
+    "3id-connect": "^1.0.0-alpha.15",
+    "@ceramicnetwork/ceramic-http-client": "^0.7.3",
+    "@ceramicnetwork/http-client": "^0.9.5",
+    "@ceramicstudio/idx": "^0.7.0",
+    "@ceramicstudio/idx-tools": "^0.7.0",
+    "@ceramicstudio/idx-web": "^0.2.0",
+    "@portis/web3": "^3.0.3",
+    "@walletconnect/web3-provider": "^1.3.4",
+    "authereum": "^0.1.0",
+    "dag-jose": "^0.3.0",
+    "dids": "^1.1.1",
+    "fortmatic": "^2.2.1",
+    "identity-wallet": "^2.0.0-alpha.13",
+    "ipfs": "^0.54.2",
+    "ipfs-http-client": "^49.0.2",
+    "multiformats": "^3.0.3",
+    "skynet-js": "^2.9.0",
+    "vue-router": "^3.2.0",
+    "web3modal": "^1.9.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
