--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vuesax": "^4.0.1-alpha.25",
-    "vuex": "^3.6.2",
     "3id-connect": "^1.0.0-alpha.15",
     "@ceramicnetwork/ceramic-http-client": "^0.7.3",
     "@ceramicnetwork/http-client": "^0.9.5",
@@ -21,15 +17,21 @@
     "@portis/web3": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.4",
     "authereum": "^0.1.0",
+    "core-js": "^3.6.5",
     "dag-jose": "^0.3.0",
     "dids": "^1.1.1",
     "fortmatic": "^2.2.1",
     "identity-wallet": "^2.0.0-alpha.13",
     "ipfs": "^0.54.2",
     "ipfs-http-client": "^49.0.2",
+    "js-cookie": "^2.2.1",
     "multiformats": "^3.0.3",
     "skynet-js": "^2.9.0",
+    "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3",
     "web3modal": "^1.9.1"
   },
   "devDependencies": {
