--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve --open"
   },
   "dependencies": {
     "3id-connect": "^1.0.0-alpha.15",
+    "@ceramicnetwork/3id-did-resolver": "^0.6.10",
     "@ceramicnetwork/ceramic-http-client": "^0.7.3",
     "@ceramicnetwork/http-client": "^0.9.5",
     "@ceramicstudio/idx": "^0.7.0",
@@ -25,6 +27,7 @@
     "ipfs": "^0.54.2",
     "ipfs-http-client": "^49.0.2",
     "js-cookie": "^2.2.1",
+    "mdbvue": "6.7.2",
     "multiformats": "^3.0.3",
     "skynet-js": "^2.9.0",
     "vue": "^2.6.11",
@@ -41,6 +44,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-mdb": "~2.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
