--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^2.2.1",
     "multiformats": "^3.0.3",
     "skynet-js": "^2.9.0",
+    "socket.io-client": "^3.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuesax": "^4.0.1-alpha.25",
