--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ceramicnetwork/ceramic-http-client": "^0.7.3",
     "@ceramicnetwork/http-client": "^0.9.5",
     "@ceramicstudio/idx": "^0.7.0",
+    "@ceramicstudio/idx-constants": "^0.7.0",
     "@ceramicstudio/idx-tools": "^0.7.0",
     "@ceramicstudio/idx-web": "^0.2.0",
     "@portis/web3": "^3.0.3",
@@ -30,6 +31,7 @@
     "skynet-js": "^2.9.0",
     "socket.io-client": "^3.1.1",
     "vue": "^2.6.11",
+    "vue-image-crop-upload": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.6.2",
