--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "socket.io-client": "^3.1.1",
     "vue": "^2.6.11",
     "vue-image-crop-upload": "^2.5.0",
+    "vue-qrcode-reader": "^2.3.16",
     "vue-router": "^3.2.0",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.6.2",
