--- a/package.json
+++ b/package.json
@@ -1,70 +1,25 @@
 {
-  "name": "asclepius-app",
-  "version": "0.2.0",
+  "name": "aslepius",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "test": "jest"
   },
   "dependencies": {
-    "3id-connect": "^1.0.0-alpha.15",
-    "@ceramicnetwork/ceramic-http-client": "^0.7.3",
-    "@ceramicnetwork/http-client": "^0.9.5",
-    "@ceramicstudio/idx": "^0.7.0",
-    "@ceramicstudio/idx-constants": "^0.7.0",
-    "@ceramicstudio/idx-tools": "^0.7.0",
-    "@ceramicstudio/idx-web": "^0.2.0",
-    "@portis/web3": "^3.0.3",
-    "@walletconnect/web3-provider": "^1.3.4",
-    "authereum": "^0.1.0",
-    "core-js": "^3.6.5",
-    "dag-jose": "^0.3.0",
-    "dids": "^1.1.1",
-    "fortmatic": "^2.2.1",
-    "identity-wallet": "^2.0.0-alpha.13",
-    "ipfs": "^0.54.2",
-    "ipfs-http-client": "^49.0.2",
-    "js-cookie": "^2.2.1",
-    "multiformats": "^3.0.3",
-    "qrcode": "^1.4.4",
-    "skynet-js": "^2.9.0",
-    "socket.io-client": "^3.1.1",
-    "vue": "^2.6.11",
-    "vue-image-crop-upload": "^2.5.0",
-    "vue-qrcode-reader": "^2.3.16",
-    "vue-router": "^3.2.0",
-    "vuesax": "^4.0.1-alpha.25",
-    "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.0.0-beta.3",
-    "web3modal": "^1.9.1"
+    "core-js": "^3.8.3",
+    "nuxt": "^2.14.12",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@nuxtjs/vuetify": "^1.11.3",
+    "@vue/test-utils": "^1.1.2",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "vue-jest": "^3.0.4"
+  }
 }
